--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -6,9 +6,9 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 env:
-  SONAR_TOKEN: 'sqp_52808a1565d5d2816708d5b3d72c919f269e5261'
-  PROJECT_NAME: 'demo_proj'
-  SONAR_URL: 'http://sonar.rahulyadav.click/'
+  SONAR_TOKEN: sqp_52808a1565d5d2816708d5b3d72c919f269e5261
+  PROJECT_NAME: demo_proj
+  SONAR_URL: http://sonar.rahulyadav.click/
 
 jobs:
   build:
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:$PROJECT_NAME /d:sonar.login=$SONAR_TOKEN /d:sonar.host.url=$SONAR_URL
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"$PROJECT_NAME" /d:sonar.login="$SONAR_TOKEN" /d:sonar.host.url="$SONAR_URL"
           dotnet build
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login=$SONAR_TOKEN
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
