--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"$PROJECT_NAME" /d:sonar.login="$SONAR_TOKEN" /d:sonar.host.url="$SONAR_URL"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:$PROJECT_NAME /d:sonar.login=$SONAR_TOKEN /d:sonar.host.url=$SONAR_URL
           dotnet build
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login=$SONAR_TOKEN
